--- a/_posts/2013-09-09-jscool19.md
+++ b/_posts/2013-09-09-jscool19.md
@@ -24,7 +24,7 @@ JS除了有函数式编程、事件驱动编程、命令式编程的泛式之外
 对于熟悉Java/C++的人选择类式继承会感觉更容易理解。不过原型继承更容易实现。
 
     var object = {};  //定义一个空对象
-    object.__proto__ = {  //直接为其设置原型
+    object._proto_ = {  //直接为其设置原型
         name: "Ran Aizen",
         age: 19
     };
@@ -36,12 +36,12 @@ JS除了有函数式编程、事件驱动编程、命令式编程的泛式之外
     console.log(repo.private);  //false
     
 请看以上两部分代码，第一部分是为单个对象设置了原型;第二部分是通过在构造函数中添加原型从而使实例化结果继承了原型。  
-这里不推荐使用`__proto__` 属性，这个属性是存在于每个对象中的隐藏属性，代表了该对象的原型，如果对其进行修改不当可能会影响到`constructor` 的指向和 `instanceof`的返回结果的问题。  
+这里不推荐使用`_proto_` 属性，这个属性是存在于每个对象中的隐藏属性，代表了该对象的原型，如果对其进行修改不当可能会影响到`constructor` 的指向和 `instanceof`的返回结果的问题。  
 而`prototype`属性时推荐使用的，他被用来给实例化对象设置原型。
 
 对于`_proto_` 和 `prototype`可以这么理解:  
 `prototype`属性是**构造函数**内使用的，用来设置原型继承的不可枚举属性。  
-`__proto__`属性是**所有对象**内使用的，用来指向其原型并构成**原型链**的不可枚举属性。
+`_proto_`属性是**所有对象**内使用的，用来指向其原型并构成**原型链**的不可枚举属性。
 
 ##Prototype Chain
 刚才上面提到了**原型链**一词。他是JavaScript实现面向对象的核心中的核心，同时也是公认的最难理解的特性之一。
@@ -49,8 +49,72 @@ JS除了有函数式编程、事件驱动编程、命令式编程的泛式之外
 这里给出一段官方的解释：  
 > 继承方面,JavaScript中的**每个对象**都有一个内部私有的链接指向另一个对象 (或者为 null),这个对象就是原对象的原型. 这个原型也有自己的原型, 直到对象的原型为null为止. 这种一级一级的链结构就称为**原型链**.
 
-纯粹的想像这种链是很难的，我们需要借助一幅图来理解prototype chain：
+###`Object.prototype`
+他是原型链的最顶端，所有对象的基本属性（例如：`toString()`、`valueOf()`）全部继承自`Object.prototype`对象，而 `Object.prototype`的原型—— `Object.prototype.__proto__`对象则是整个原型链的终点，他的指向是关键字`null`。（还记得对`null`的描述吗？）
+
+###看清原型链
+我们先声明一个空对象：
+
+    var obj = {};
+    
+并且`obj`相当于：
+
+    var obj = new Object();
+    
+所以`obj`是一个由`Object`构造函数实例化的一个普通对象，那么他应该直接继承自`Object.prototye`对象。因此：
+
+    obj.__proto__ === Object.prototype
+    //返回true
+    
+再比如说：
+
+    var arr = [];
+    //声明一个数组
+    
+    arr.__proto__ === Array.prototype
+    //返回true
+    arr.__proto__ === Object.prototype
+    //返回false
+    
+    var func = function () {};
+    //声明一个函数表达式
+    
+    func.__proto__ === Function.prototype
+    //返回true
+    func.__proto__ === Object.prototype
+    //返回false
+    
+###constructor与原型
+上面我举了两个特殊对象（函数和数组）的例子。很明显间接的原型不被认可。虽然所有对象无论直接间接都继承自`Object.prototype`，但是对象的`__proto__`属性仅指它向直接继承的对象。
+
+不知大家能否从中得出这个结论：  
+对象的`constructor`属性取决于对象的`__proto__`属性。  
+其实在运算符`instanceof`内部就是依据对象的`__proto__`属性来判断该对象是否是某个构造函数的实例。
+
+###实例化的背后
+在引擎内部，每当构造函数实例化了一个对象时，构造函数内部返回的对象的`__proto__`就会自动指向构造函数的`prototype`，从而将构造函数的原型继承下来。然后对象的`constructor`属性改写为指向构造函数。
+
+###从一个测试开始
+我曾经为了弄懂原型链而做过一个测试，然后得出这么一个结论（别喷我。。）：  
+
+1. 向Object.prototype中添加的成员可以被全部构造函数直接或通过原型调用。
+2. 向Function.prototype中添加的成员可以通过Function或Function.prototype调用而其他构造函数只能直接调用，若用原型调用返回`undefined`
+3. 向其它内置构造函数的prototype属性中添加成员，只能被所有构造函数以.prototype方式调用
+
+总结的很潦草，也没抓住本质。我们已经知道，Object.prototype是原型链的最高级，不过为什么在Function.prototype中添加的成员能被Object访问？为什么Object和Function能够直接访问各自prototype中的成员？
+
+###事实
+Object能够访问Function.prototype让我们百思不得解时，我们可能忽略了一个重要的因素：Object、Array、Date等等，还有Function，他们不仅仅是对象，还是一个**函数**，而函数的原型`__proto__` 是来自`Function.prototype`的！  
+情况一下子明朗了～原来`Object.__proto__`是指向`Function.protorype`的。并且，Function也是一个**函数**，所以`Function.__proto__`也指向`Function.prototype`。  
+而普通对象统统继承自`Object.prototype`，所以`Function.prototype.__proto__`就指向`Object.prototype`。  
+于是，Function与Object之间的相互继承形成了一个环形的引用。
+
+这样我们就能够解释上面提出的两个问题了：  
+
+由于`Function.prototype.__proto__`继承`Object.prototype`，来自`Object.prototype`的成员就能够被`Function.prototype`访问到;`Function`等构造函数继承了`Function.prototype` ，`Function.prototype`的内容（也就是Object.prototype）便能被`Function`等构造函数对象直接访问。  
+由于`Object.__proto__`继承了`Function.prototype`，所以`Object`可以直接调用`Function.prototype`的成员。并且从上面的分析可知，`Function.prototype.__proto__`继承了`Object.prototype`，所以Object不仅可以通过prototype调用`Object.prototype`的成员，还可以直接访问。
+
+###图解原型链
+纯粹的想像这种链是很难的。最后我们用一幅图来理解prototype chain吧：
 
 ![Prototype Chain]({{ site.url }}/source/postimg/prototype.png)
-
-
