--- a/_posts/2013-09-13-new43.md
+++ b/_posts/2013-09-13-new43.md
@@ -8,3 +8,187 @@ mdmark:
 metakey: 
 metades:
 ---
+
+as we all know，原本JavsScipt难以处理二进制数据。因此在Node中为其增强了这一功能，使JavaScript也能拥有操作字节流能力。而buffer模块就是为这一功能而存在的。buffer模块（对象）包含一个`Buffer`构造函数和一个静态属性，以及一个不推荐使用的`SlowBuffer`构造函数。这里根据官方文档介绍前两个成员。
+
+##Buffer
+首先Buffer对象是全局的。因此可以在程序中直接调用`Buffer`而不需要`require('buffer').Buffer`。
+
+原始数据存储在Buffer类的实例中，Buffer类和一个整型数组类似，只不过对应到V8的堆之外的原始内存中。
+
+Buffer与字符串对象之间的转换需要一个明确的编码方式，这里有如下几种：
+    
+	ascii：仅适用于7位ASCII码，这种编码速度很快，并且如果设置的话会忽略掉高位。
+	utf8：多字节编码的Unicode字符。
+	utf16le：2或4字节的小尾数编码的Unicode字符
+	ucs2：utf16le的别名
+	base64：基于64位的字符串编码
+	binary：仅使用每个字符串的前8位将原始二进制数据编码到字符串的编码方式。
+	//上面种编码方式已经被弃用，将会在未来的版本中移除。
+	hex：将每个字节以两个16进制的字符编码
+    
+注意：将字符串转换到buffer时，第一种编码会把一个空字符串（‘\0’或‘\u0000’）转换到0x20（一个空格字符代码），如果你想把一个空字符转换为0x00，应该使用第二种编码方式！
+
+Buffer对象也可以使用类型数组。他会被克隆成一个ArrayBuffer用来备份类型数组。buffer和ArrayBuffer并不共享内存。
+
+###Buffer的实例化
+Buffer属于全局对象，用来直接处理二进制数据。他可以通过以下一系列途径构造：
+
+    new Buffer(size)
+    	//size Number
+        //以给定大小的数字创建buffer，单位byte
+
+    new Buffer(array)
+    	//array Array
+        //以一个8位的数组创建
+
+    new Buffer(str, [encoding])
+    	//str String - 待编码的字符串.
+    	//encoding String - 编码方式，可选（默认为utf-8）.
+        //以给定的字符串、可选的编码方式创建buffer
+
+##Buffer的静态方法：
+
+###Buffer.isEncoding(encoding)
+encoding String  
+如果参数encoding是一个有效的编码参数，返回true，否则返回false
+
+###Buffer.isBuffer(obj)  
+obj Object  
+Return: Boolean  
+判断obj是否为一个Buffer实例
+
+###Buffer.byteLength(string, [encoding])
+string String  
+encoding String,可选，默认'utf8'  
+Return: Number  
+给出字符串的实际字节数。注意该方法和String.prototype.length不同！  
+ex：
+	
+	str = '\u00bd + \u00bc = \u00be';
+	console.log(str + ": " + str.length + " characters, " + Buffer.byteLength(str, 'utf8') + " bytes");
+	//： ½ + ¼ = ¾: 9 characters, 12 bytes
+    
+###Buffer.concat(list, [totalLength])
+list Array ，准备拼接Buffer对象的列表  
+totalLength Number 拼接后buffer对象的总长度  
+返回一个拼接后的buffer对象，如果list是空数组或如果totalLength是0，那么他会返回一个0长度的buffer对象。  
+如果list仅有一个元素，则返回这个元素的buffer；如果多个元素，则会返回一个新创建的拼接buffer。  
+不提供totalLength将会比显式提供的执行速度更快  
+    
+##对象成员：var buf = new Buffer(arg);
+
+###buf.write(string, [offset], [length], [encoding])
+string String - 准备写入buffer的数据  
+offset Number, 可选的，默认是0  
+length Number, 写入的字节数，可选，默认是buffer.length-offset  
+encoding String, 可选,默认是'utf8'  
+返回值是8位字符的个数  
+如果buffer没有充足的空间容纳整个字符串，他只会写入字符串的一部分。  
+写入的字符串个数会保存在Buffer._charsWritten中，下次调用buf.write()时会被覆盖重写。
+
+###buf.toString([encoding], [start], [end])
+encoding String, 可选，默认'utf8'  
+start Number, 可选，默认0  
+end Number, 可选，默认buffer.length  
+该方法用于解码，并从经编码的buffer流中返回一个从start到end长度的字符串。  
+ex：
+	
+    buf = new Buffer(256);
+    len = buf.write('\u00bd + \u00bc = \u00be', 0);
+    console.log(len + " bytes: " + buf.toString('utf8', 0, len));
+
+###buf.toJSON()
+返回一个JSON数组（数组字面量）表示的Buffer实例。  
+当JSON.stringify()去字符串化一个Buffer实例时会隐式的调用该函数。  
+ex：
+
+	var buf = new Buffer('test');
+	var json = JSON.stringify(buf);
+	console.log(json);
+	// '[116,101,115,116]'
+	var copy = new Buffer(JSON.parse(json));
+	console.log(copy);
+	// <Buffer 74 65 73 74>
+
+###buf[index]
+通过索引获取或设置buf的指定字符。取得的值是单个字节，范围是0~255或十六进制的0x00~0xFF
+
+###buf.length
+Number  
+以byte为单位返回内存中分配的buffer的大小。注意：他不会随buffer内容的改变而改变。  
+ex：
+
+	buf = new Buffer(1234);
+	console.log(buf.length);
+	buf.write("some string", 0, "ascii");
+	console.log(buf.length);
+	// 1234
+	// 1234
+
+###buf.copy(targetBuffer, [targetStart], [sourceStart], [sourceEnd])
+targetBuffer Buffer object - 拷贝到的Buffer  
+targetStart Number,可选，默认0  
+sourceStart Number, 可选，默认0  
+sourceEnd Number, 可选，默认buffer.length  
+将buf的byte数据从sourceStart~sourceEnd拷贝到从targetStart开始的targetBuffer。越界的化会自动设为默认值。
+
+###buf.slice([start], [end])
+start Number,可选，默认0  
+end Number, 可选，默认buffer.length  
+该方法会返回一个引用原buffer对象指定位置所在内存地址的新buffer对象，所以改变新buffer也会影响到原buffer！  
+ex:
+
+	var buf1 = new Buffer(26);
+	for (var i = 0 ; i < 26 ; i++) {
+		buf1[i] = i + 97; // 97 is ASCII a
+	}
+	var buf2 = buf1.slice(0, 3);
+	console.log(buf2.toString('ascii', 0, buf2.length));// abc
+	buf1[0] = 33;
+	console.log(buf2.toString('ascii', 0, buf2.length));// !bc
+
+###buf.readUInt8(offset, [noAssert])
+offset Number  
+noAssert Boolean, 可选，默认是false  
+Return: Number  
+从buf中读取指定偏移量的无符号8位整型数。设置noAssert为true表示忽略对offset的验证，就是说如果offset越界也会被忽略。  
+下同：
+
+    buf.readUInt8(offset, [noAssert])
+    buf.readUInt16LE(offset, [noAssert])
+    buf.readUInt16BE(offset, [noAssert])
+    buf.readUInt32LE(offset, [noAssert])
+    buf.readUInt32BE(offset, [noAssert])
+    //无符号
+    
+    buf.readInt8(offset, [noAssert])
+    buf.readInt16LE(offset, [noAssert])
+    buf.readInt16BE(offset, [noAssert])
+    buf.readInt32LE(offset, [noAssert])
+    buf.readInt32BE(offset, [noAssert])
+    //有符号
+    
+    buf.readFloatLE(offset, [noAssert])
+    buf.readFloatBE(offset, [noAssert])
+    //读取32位的浮点数
+    
+    buf.readDoubleLE(offset, [noAssert])
+    buf.readDoubleBE(offset, [noAssert])
+    //64位（双精度）
+
+###buf.fill(value, [offset], [end])#
+value  
+offset Number, 可选  
+end Number, 可选  
+给buffer赋值.如果未指定offset和end的话，将会填充整个buffer
+
+##INSPECT_MAX_BYTES
+属于buffer对象的成员
+    
+    var buffer = require('buffer');
+    buffer.INSPECT_MAX_BYTES
+    
+Number, Default: 50  
+设置调用`buf.inspect()`时会返回多少字节.
+
