--- a/_posts/2013-08-15-new37.md
+++ b/_posts/2013-08-15-new37.md
@@ -32,6 +32,22 @@ metades:
 JavaScript除了是函数式语言外还是一门基于事件驱动的语言，因此语言本身和事件模型浑然天成。  
 这个事件模型在前端用的最多（其实后端也基本上都是事件驱动），DOM几乎离不开事件。DOM的事件数不胜数，页面的每个元素都满足这个事件模型。
 
+####CustomEvent
+一般情况下事件都是由宿主或程序内部给你定义好的，比如我们常用的`"onclick"`、`"onload"`等等，都是浏览器DOM模型中提供的事件，这些事件类型虽广，不过对于事件驱动编程来说，仍有一部分事件是需要我们自己编程实现的。以前浏览器并没有提供自定义事件的接口，于是开发者们搞出了一个叫**PubSub**（注：发布/订阅。即‘观察者模式’）的设计模式，用来模拟JavaScript的事件机制。虽说表面看起来像是模拟了事件的注册与触发，但究其根本该方法并非弄出一个真正的事件对象，也并没有加入事件的轮询过程，所以相比原生事件模型，PubSub还是有略微缺陷。那是否能够自定义我们自己的事件呢？答案是肯定的。接下来就展示一下如何在浏览器端实现CustomEvent：
+
+	var myEvent = new Event('gamewin');
+    //或者用 var myEvent = new CustomEvent('gamewin');
+    
+    document.addEventListener('gamewin', function (e) {
+    	console.log(e.type, "haha~~ I'm Event~");
+    });
+    
+    document.dispatchEvent(myEvent);
+    
+这里解释一下上面的代码。首先创建了一个Event对象，同时传入一个必需的字符串类型参数，代表事件的`type`，给他起个名字叫“gamewin”，意思是当游戏胜利时。。随后我在`document`对象上添加了一个监听器监听`gamewin`事件。到这里，已經完成自定义事件的声明与注册。接下来就是要触发这个事件：在一个被监听的对象上面调用`dispatchEvent()`方法。然后，你的事件就会压入事件队列并进入事件循环，等队列前面的事件都已经处理完之后，你的Event就被立即触发啦～  
+当然喽，自定义的事件没有`on...`的格式，不能像`onclick`等预先定义好的事件一样进行注册。因此只能用最标准的方式`addEventListener()`来注册事件。
+
+####事件冒泡与事件授权
 如果某个元素触发一个事件，document对象就会发出一个**事件流**，沿着DOM树流向目标元素（target），沿途的元素就算绑定了事件也不会被执行。当到达了目标元素，就开始执行绑定在它上面的事件处理函数，但如果handle函数没有给定在就不执行。然后从目标元素开始向上级冒泡，如果沿途有相同或包含关系的事件，也会被依次触发。
 
 “源元素”——>“父元素”——>“页面根元素”，这代表的是**事件冒泡**的过程。
