--- a/_posts/2013-08-2-new35.md
+++ b/_posts/2013-08-2-new35.md
@@ -59,7 +59,7 @@ metades:
 
 仍然还是抛错，并且还是对removeChild函数那一行。但是问题稍有些眉目了，我们可以注意到：当for不断遍历list的子节点并同时删除筛选出的子节点的过程中，list.childNodes.length这个变量在不断变化，也就是说，每次操作都会使这个数组长度减一，而i还在不断递增。设想这样一种情况： 当for依旧按照之前的‘计划’按部就班的遍历缓存的childNodes时，childNodes的长度在悄悄递减，第一次遍历没有问题，第二次遍历也可能顺利执行，但随着i与length的接近，就会发生缓存节点数小于实际存在的节点数问题，当for继续遍历时，list.childNodes[i]变成了undefined。而list.removeChild(undefined)会抛出一个语法错误（节点必须指定）。
 
-再来看看我的这段代码的输出：开始正确输出了节点索引0和第一个节点<li></li>;，随后抛错，并没有移除第二个节点。这与上面的猜测基本吻合！进一步例子证实了猜想：
+再来看看我的这段代码的输出：开始正确输出了节点索引0和第一个节点li随后抛错，并没有移除第二个节点。这与上面的猜测基本吻合！进一步例子证实了猜想：
 
 	for (var i = 0; i <= list.childNodes.length; i++) {
 		if (list.childNodes[i].removeChild){
