--- a/_posts/2013-05-28-new16.md
+++ b/_posts/2013-05-28-new16.md
@@ -2,22 +2,22 @@
 layout: poslay
 title: ubutnt下的双显卡切换——打造高性能且节能的ubuntu笔记本
 label: 技术文章
-kind: 
+kind:
 mdmark: ran
 metakey:
 metades:
 ---
 
-解决ubuntu系统的耗电快,发热严重,风扇狂转问题。  
-就是：
+解决ubuntu系统的耗电快,发热严重,风扇狂转问题。就是：
+
 + 关闭独显，使用集显。
 + 调节硬盘转速与电源性能优化。
 
 ####双显卡切换
-#####更新显卡信息，非常重要，否则可能识别出错：
-	
+更新显卡信息，非常重要，否则可能识别出错：
+
     sudo update-pciids
-    
+
 等待‘一会’就可完成更新。。。
 #####安装bumblebee
 打开终端，依次执行下面的代码即可完成安装：
@@ -68,13 +68,13 @@ metades:
     sudo apt-get install cpufreqd indicator-cpufreq
 
 然后重启即可看到右上角的区域有个像芯片似的标志，单击他会弹出菜单，看最下面的几个选项：
-    
+
     conservative——按需调节cpu频率，不用时调到最低，用时按需分配调节。
     ondemand——默任，不用时调到最低，一旦用到时调到极限
     powersave——无论何时都最低频率
     performance——无论何时都最高频率
 
-选择即可。  
+选择即可。
 
 注：若经过配置后发现鼠标经常被关闭，咱们不用紧张，是这样的：因为开启了节能控制，所以当电源没插时，笔记本会自动进入电池供电模式（即节能模式），为了省电，连鼠标也被设成“几秒中不动的话就自动挂起”，这时左键或右键单击一下即可唤醒鼠标。这种情况只有当电池供电是才会发生！！  
 （其实开始时我也吓一跳，后来慢慢发现规律的）
