--- a/_posts/2013-08-14-jscool1.md
+++ b/_posts/2013-08-14-jscool1.md
@@ -1,19 +1,17 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『壹』———概念前奏
+title: Little JavaScript Book『壹』———概念
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
 mdmark: ran
 metakey: JavaScript,酷玩,教程,SouFii,blog,个人博客
-metades: JavaScript花式玩法『壹』———概念前奏，SouFii的博客
+metades: JavaScript花式玩法『壹』———概念,前奏，SouFii的博客
 ---
 
-技巧。是玩出花样前必须掌握的。简单说一下在JS中的技巧，比如说：  
-我一行代码写出来能完成别人好几行代码才能完成的工作,叫技巧.	  
-这么做和常规做法比能避免一些问题的出现,亦是技巧.	  
-换成另外一种模式完成任务,合理使用多种模式,同一个目的的多种达到路径....都属于技巧应用.  
-由于JavaScript弱类型语言的动态性,灵活性.好多种在其他强类型静态语言里难以实现的招式都能运用自如.这里我主要说说JS中的那些基本技巧.  
+技巧。是玩出花样前必须掌握的。 
+由于JavaScript弱类型语言的动态性,灵活性以及支持多种泛型编程,于是乎好多种在其他强类型静态语言里难以实现的招式都能运用自如.
+
 在这之前我有必要梳理一下JavaScript中的重要概念,以便理清思路.
 
 ####对象准确分为：
