--- a/_posts/2013-08-14-jscool2.md
+++ b/_posts/2013-08-14-jscool2.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『贰』———基本技巧
+title: Little JavaScript Book『贰』———基本技巧
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
@@ -9,7 +9,7 @@ metakey: JavaScript,酷玩,教程,SouFii,blog,个人博客
 metades: JavaScript花式玩法『贰』———基本技巧，SouFii的博客
 ---
 
-这章开始搜罗基本编写技巧，看了Patterns文章后深有体会。我会在这篇PO中承接上个PO基本概念，把JavaScript语言中的一些看似极为简单的东西重新归纳划分并解释，因为很多句法，像：var和function这两个最基本的声明语句容易在你不屑一顾时把人搞乱的。。
+看了Patterns文章后深有体会。我会在这篇PO中承接上个PO基本概念，把JavaScript语言中的一些看似极为简单的东西重新归纳划分并解释，因为很多句法，像：var和function这两个最基本的声明语句容易在你不屑一顾时把人搞乱的。。
 
 ##减少全局变量的使用
 借此说个题外话，也算是个灵活运用（浏览器全局环境下:）
