--- a/_posts/2013-08-14-jscool5.md
+++ b/_posts/2013-08-14-jscool5.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『伍』———诡异特性（隐式类型转换篇-续）
+title: Little JavaScript Book『伍』———诡异特性（隐式类型转换篇-续）
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
