--- a/_posts/2013-08-15-jscool7.md
+++ b/_posts/2013-08-15-jscool7.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『柒』———诡异特性（var篇）
+title: Little JavaScript Book『柒』———诡异特性（var篇）
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
