--- a/_posts/2013-08-16-jscool10.md
+++ b/_posts/2013-08-16-jscool10.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『跨域』———跨域技术总结
+title: Little JavaScript Book『跨域』———跨域技术总结
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
