--- a/_posts/2013-08-16-jscool11.md
+++ b/_posts/2013-08-16-jscool11.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『拾』———诡异特性（null、undefined和NaN、Infinity）
+title: Little JavaScript Book『拾』———诡异特性（null、undefined和NaN、Infinity）
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
