--- a/_posts/2013-08-24-jscool13.md
+++ b/_posts/2013-08-24-jscool13.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『拾贰』———诡异特性(闭包、作用域链与内存泄漏)
+title: Little JavaScript Book『拾贰』———诡异特性(闭包、作用域链与内存泄漏)
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
