--- a/_posts/2013-08-29-jscool16.md
+++ b/_posts/2013-08-29-jscool16.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『拾伍』———诡异特性(包装对象、临时对象与显式类型转换)
+title: Little JavaScript Book『拾伍』———诡异特性(包装对象、临时对象与显式类型转换)
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
