--- a/_posts/2013-09-06-jscool18.md
+++ b/_posts/2013-09-06-jscool18.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『拾柒』———诡异特性（重定义函数）
+title: Little JavaScript Book『拾柒』———诡异特性（重定义函数）
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
