--- a/_posts/2013-09-09-jscool19.md
+++ b/_posts/2013-09-09-jscool19.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『拾扒』———Chain
+title: Little JavaScript Book『拾扒』———Chain
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
