--- a/_posts/2013-08-13-jscool0.md
+++ b/_posts/2013-08-13-jscool0.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『零』———简单说说
+title: Little JavaScript Book『零』
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
@@ -9,19 +9,20 @@ metakey: JavaScript,酷玩,教程,SouFii,blog,个人博客
 metades: JavaScript花式玩法『零』———开始扯淡，SouFii的博客
 ---
 
-脚本语言？面向对象？弹出广告？语法怪异？……  
-JavaScript是啥玩意，属于啥，到底能干啥，一直以来是开发人员模糊而又懒的了解的问题。  
-特此声明：我不是JavaScript的专家，仅仅学了不到一年，我解释不了那么多的概念，也懒得去做无聊的解说，至于JavaScript到底该如何被看待以及如何去理解应用，读完我的YY后自己的想吧。  
+脚本语言？面向对象？函数式编程？弹出广告？……  
+JavaScript是啥玩意，属于啥，到底能干啥，一直以来是非前端人员模糊而又懒得了解的问题。  
+特此声明：我不是JavaScript的专家，仅仅学了不到一年，我解释不了那么多的概念，也懒得去做无聊的解说，至于JavaScript到底该如何被看待以及如何去理解应用，全看你自己的想法。  
 JavaScript如何‘酷玩’，所谓酷玩，即在充分发挥其常规功能的情况下另辟蹊径，探索更多的特性及用法，以达到游刃有余。  
 
-折腾是Geek的天性，只要你爱折腾，就会玩出层出不穷的花样来。  
-如今的JavaScript可不是仅仅用来处理表单、弄个令人厌烦的弹出窗口那么低级了，你若是还把目光停留在90年代初，那你真的out了。  
-入正题。。我不打算写详细的介绍和入门，入门的话，随便到网上一搜就有成片成片的相同内容的博客供你参考。我YY这个JS酷玩系列的主要目的是整理自己学过的东西 + 和爱好者探讨JS玩法 + 给不知道选择什么语言作为入门的选手提供个参考。  
-打算把系列分为以下几部分写：  
-基本技巧  
-诡异特性  
-跨域技术  
-核心玩法  
-一个Chrome应用  
-xss与教务处等等  
-从Shell的角度玩Node  
+折腾是Geek的天性。只要你有颗Geek之心、爱折腾，就会玩出层出不穷的花样来。  
+如今的JavaScript可不是仅仅用来处理表单、弄个令人厌烦的弹出窗口那么低低低级了，你若是还把目光停留在90年代初，那你真的out了。  
+入正题。。我不打算写详细的语法介绍和入门，入门的话，随便到网上一搜就有成片成片的相同内容的博客供你参考。这个JS酷玩系列的主要目的是整理自己学过的和自己研究出来的东西、搞搞JS的各种玩法。
+
+打算把系列分为以下几个part来写：  
++ 基本技巧  
++ 诡异特性  
++ 跨域技术  
++ 高效玩法  
++ 一个Chrome应用  
++ xss与HIT教务处  
++ Shell & Node  
