--- a/_posts/2013-08-14-jscool4.md
+++ b/_posts/2013-08-14-jscool4.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『肆』———诡异特性（隐式转换与分号插入篇）
+title: Little JavaScript Book『肆』———诡异特性（隐式转换与分号插入篇）
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
