--- a/_posts/2013-08-15-jscool8.md
+++ b/_posts/2013-08-15-jscool8.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『捌』———诡异特性（function篇）
+title: Little JavaScript Book『捌』———诡异特性（function篇）
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
