--- a/_posts/2013-08-15-jscool9.md
+++ b/_posts/2013-08-15-jscool9.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『玖』———诡异特性（function-续）
+title: Little JavaScript Book『玖』———诡异特性（function-续）
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
