--- a/_posts/2013-08-22-jscool12.md
+++ b/_posts/2013-08-22-jscool12.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『拾壹』———诡异特性(eval篇)
+title: Little JavaScript Book『拾壹』———诡异特性(eval篇)
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
