--- a/_posts/2013-08-27-jscool14.md
+++ b/_posts/2013-08-27-jscool14.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『拾叁』———诡异特性(this的指向)
+title: Little JavaScript Book『拾叁』———诡异特性(this的指向)
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
