--- a/_posts/2013-08-28-jscool15.md
+++ b/_posts/2013-08-28-jscool15.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『拾肆』———诡异特性(关键字new)
+title: Little JavaScript Book『拾肆』———诡异特性(关键字new)
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
