--- a/_posts/2013-09-03-jscool17.md
+++ b/_posts/2013-09-03-jscool17.md
@@ -1,6 +1,6 @@
 ---
 layout: poslay
-title: JavaScript花式玩法『拾陆』———诡异特性(匿名)
+title: Little JavaScript Book『拾陆』———诡异特性(匿名)
 label: 酷玩JavaScript
 kind: label-important
 ptr: JavaScript
