--- a/_posts/2013-11-05-new46.md
+++ b/_posts/2013-11-05-new46.md
@@ -14,13 +14,13 @@ metades:
 
 近年来关于RealTime的实现，主要还是基于Ajax的拉取和Comet的推送。大家都知道Ajax，这是一种借助浏览器端JavaScript实现的异步无刷新请求功能：要客户端按需向服务器发出请求，并异步获取来自服务器的响应，然后按照逻辑更新当前页面的相应内容。但是这仅仅是**拉取**啊，这并不是真正的RealTime：缺少服务器端的自动推送！因此，我们不得不使用另一种略复杂的技术Comet，只有当这两者配合起来，这个web应用才勉强算是个RealTime应用！
 
-###Hello WebSocket！
+##Hello WebSocket！
 
 ![WebSocket in Client Chrome]({{ site.url }}/source/postimg/wsc.png)
 
 不过随着HTML5草案的不断完善，越来越多的现代浏览器开始全面支持WebSocket技术了。至于WebSocket，我想大家或多或少都听说过。
 
-先简单的科普一下：  
+###Hand-shaking
 这个WebSocket可以说是一种协议，它建立在无状态的HTTP协议基础之上。从字面的意思来理解，就是将TCP的Socket（套接字）应用在了HTTP中，从而使通信双方建立起一个保持在活动状态连接通道，并且是一个**全双工**（两个设备之间同时进行双向通信）。
 
 再简单点来说，就好像将Ajax和Comet技术的特点结合到了一起，只不过使用起来要方便的多（当然是之指在客户端方面。。）
@@ -104,13 +104,16 @@ WebSocket传输的数据都是以`Frame`（帧）的形式实现的，就像TCP/
 按照RTF草案中的描述：
 
 + FIN： 1 bit
+
 		表示这是一个消息的最后的一帧。第一个帧也可能是最后一个。
 
 + RSV1、2、3： 1 bit each
+
 		除非一个扩展经过协商赋予了非零值以某种含义，否则必须为0
 		如果没有定义非零值，并且收到了非零的RSV，则websocket链接会失败
 
 + Opcode： 4 bit
+
 		解释说明 “Payload data” 的用途/功能
 		如果收到了未知的opcode，最后会断开链接
 		定义了以下几个opcode值:
@@ -124,30 +127,36 @@ WebSocket传输的数据都是以`Frame`（帧）的形式实现的，就像TCP/
             %xB-F ： 为进一步的非控制帧而保留的
 
 + Mask： 1 bit
-        定义“payload data”是否被标记了
+
+        定义“payload data”是否被添加掩码
         如果置1， “Masking-key”就会被赋值
         所有从客户端发往服务器的帧都会被置1
         
 + Payload length： 7 bit | 7+16 bit | 7+64 bit
+
 		“payload data” 的长度如果在0~125 bytes范围内，它就是“payload length”，
 		如果是126 bytes， 紧随其后的被表示为16 bits的2 bytes无符号整型就是“payload length”，
 		如果是127 bytes， 紧随其后的被表示为64 bits的8 bytes无符号整型就是“payload length”
 		
-		注意在所有情况下，最小字节数必须被用来编码长度
-		
 + Masking-key： 0 or 4 bytes
-		所有从客户端发送到服务器的帧都包含一个32 bits的值如果“mask bit”被设置成1，否则为0 bit
+
+		所有从客户端发送到服务器的帧都包含一个32 bits的掩码（如果“mask bit”被设置成1），否则为0 bit。一旦掩码被设置，所有接收到的payload data都必须与该值以一种算法做异或运算来获取真实值。（我下一篇再详细说明该算法）
 		
 + Payload data:  (x+y) bytes
+
 		它是"Extension data"和"Application data"的总和.
 		
 + Extension data:  x bytes
+
 		除非扩展被定义，否则就是0
 		任何扩展必须指定其Extension data的长度
 		
 + Application data:  y bytes
+
 		占据"Extension data"之后的剩余帧的空间
 		
 **注意：这些数据都是以二进制形式表示的，而非ascii编码字符串**
 
-（未完）
+按照这种格式，就定义好了一个帧，客户端或者服务器就可以用这个帧来互传数据了。既然数据已经接收，接下来就应该对这些数据进行处理了。
+
+（2013.11.5～11.9 未完）
