--- a/_posts/2013-11-10-new47.md
+++ b/_posts/2013-11-10-new47.md
@@ -18,14 +18,16 @@ metades:
 
 当消息到达服务器后，服务器程序就开始以字节为单位逐步读取这个帧，当读取到`payload-data`时，首先将数据按byte依次与`Masking-key`中的4个byte按照如下算法做异或：
 
-	//假设我们发送的帧以变量`data`表示，字节（byte）数为len;
-
+	//假设我们发送的"Payload data"以变量`data`表示，字节（byte）数为len;
+	//masking_key为4byte的mask掩码组成的数组
+    //offset：跳过的字节数
+    
     for (var i = 0; i < len; i++) {
     	var j = i % 4;
-        data[14 + i] ^= masking_key[j];
+        data[offset + i] ^= masking_key[j];
     }
 
-上面的JavaScript代码给出了掩码`Masking-key`是如何解密`Payload-data`的：先对i取模来获得要使用的masking-key的索引，然后用`data[14 + i]`与`masking_key[j]`做异或，从而得到真实的byte数据。
+上面的JavaScript代码给出了掩码`Masking-key`是如何解密`Payload-data`的：先对i取模来获得要使用的masking-key的索引，然后用`data[offset + i]`与`masking_key[j]`做异或，从而得到真实的byte数据。
 
 ###Fragment
 理论上来说，每个帧（Frame）的大小是没有限制的，因为payload-data在整个帧的最后。但是发送的数据有不能太大，否则就违反了WebSocket节省网络带宽的初衷。那如果我们想传点大数据该怎么办呢？WebSocket协议给我们提供了一个方法：分片，将原本一个大的帧拆分成数个小的帧。
