--- a/_posts/2013-11-05-new46.md
+++ b/_posts/2013-11-05-new46.md
@@ -20,13 +20,21 @@ metades:
 
 不过随着HTML5草案的不断完善，越来越多的现代浏览器开始全面支持WebSocket技术了。至于WebSocket，我想大家或多或少都听说过。
 
-###Hand-shaking
 这个WebSocket可以说是一种协议，它建立在无状态的HTTP协议基础之上。从字面的意思来理解，就是将TCP的Socket（套接字）应用在了HTTP中，从而使通信双方建立起一个保持在活动状态连接通道，并且是一个**全双工**（两个设备之间同时进行双向通信）。
 
 再简单点来说，就好像将Ajax和Comet技术的特点结合到了一起，只不过使用起来要方便的多（当然是之指在客户端方面。。）
 
+###设计哲学
+RFC草案中已经说明，WebSocket的目的就是为了在基础上保证传输的数据量最少。  
+这个协议是基于Frame而非Stream的，也就是说，数据的传输不是像传统的流式读写一样按字节发送，而是采用一帧一帧的Frame，并且每个Frame都定义了严格的数据结构，因此所有的信息就在这个Frame载体中。（后面会详细介绍这个Frame）
+
++ 基于TCP协议
++ 命名空间
++ 可以和HTTP Server 共享同一port
+
+###Hand-shaking
 下面我先用自然语言描述一下WebSocket的工作原理：  
-从W3C的HTML5草案中可以看出，若要实现WebSocket协议，首先需要浏览器主动发起一个HTTP请求。
+若要实现WebSocket协议，首先需要浏览器主动发起一个HTTP请求。
 
 这个请求头包含“Upgrade”字段，内容为“websocket”（注：upgrade字段用于改变HTTP协议版本或换用其他协议，这里显然是换用了websocket协议），还有一个最重要的字段“Sec-WebSocket-Key”，这是一个随机的经过`base64`编码的字符串，像密钥一样用于服务器和客户端的握手过程。一旦服务器君接收到来气客户端的upgrade请求，便会将请求头中的“Sec-WebSocket-Key”字段提取出来，追加一个固定的“魔串”：`258EAFA5-E914-47DA-95CA-C5AB0DC85B11`，并进行`SHA-1`加密，然后再次经过`base64`编码生成一个新的key，作为响应头中的“Sec-WebSocket-Accept”字段的内容返回给浏览器。一旦浏览器接收到来自服务器的响应，便会解析响应中的“Sec-WebSocket-Accept”字段，与自己加密编码后的串进行匹配，一旦匹配成功，便有建立连接的可能了（因为还依赖许多其他因素）。
 
@@ -44,6 +52,34 @@ Server正确接收后，会返回一个响应头：(同样只有关键的)
     Sec-WebSocket-Accept: ******************
 
 这表示双方**握手**成功了，之后就是全双工的通信。
+
+###安全模型
+当你看完上面一节后一定会质疑该协议的保密性和安全性，看上去任何客户端都能够很容易的向WS服务器发起请求或伪装截获数据。不过WebSocket协议的一部分对连接做了限制：WebSocket协议使用浏览器中用来限制从web页面向服务器发起连接请求的源模型。同时在双方的通信中可以利用其他的保密字段来简单阻止外来客户端非法接入。（例如Socket.IO中就利用随机生成的字段来匹配合法的客户端）  
+但是这种限制仅仅是在浏览器中，对于特殊的客户端（不是通过web浏览器），这种源模型就失效了。
+
+####连接失败
+和已经存在其他协议（例如SMTP或HTTP）的服务器建立连接将会导致连接失败，这种机制是由设计严秘的“握手”和握手完成之前建立连接时的一些“限制数据”实现的。
+
+另一种情况，假如数据是经过其他协议（特别是HTTP）发送过来的，同样会导致连接建立失败。  
+例如这种情况：当web页面中的表单数据被提交到一个WS-Server。  
+这一机制主要是由接受到数据的服务器 证明了它已经读取了握手信息 从而实现的。并且只有从客户端发送的握手帧中包含合适的信息才会让服务器触发这个动作。
+
+###和TCP、HTTP协议的关系
+基于TCP的独立的协议。
+和HTTP的唯一关联就是HTTP服务器需要把ws发出的握手动作升级为“UPgrade”请求并进行解释。
+
+默认情况下，ws协议使用80端口进行普通连接，加密的TLS连接默认使用443端口。
+
+###ws的子协议
+客户端向服务器发起握手请求的header中可能带有“Sec-WebSocket-Protocol”字段，用来指定一个特定的子协议，一旦这个字段有设置，那么服务器需要在建立连接的响应头中包含同样的字段，内容就是选择的子协议之一。
+
+子协议的命名应该是注册过的（有一套）
+为了避免潜在的冲突，建议子协议的源（发起者）使用ASCII编码的域名。
+例子：
+一个注册过的子协议叫“chat.xxx.com”，另一个叫“chat.xxx.org”。这两个子协议都会被server同时实现，server会动态的选择使用哪个子协议（取决于客户端发送过来的值）。
+
+###Extensions
+扩展是用来增加ws协议一些新特性的
 
 ###代码魔法
 上面说的仅仅是个概述，重要的是该如何在我们的web应用中使用或者说该如何建立一个基于WebSocket的应用呢？
@@ -160,6 +196,15 @@ WebSocket传输的数据都是以`Frame`（帧）的形式实现的，就像TCP/
 		占据"Extension data"之后的剩余帧的空间
 		
 **注意：这些数据都是以二进制形式表示的，而非ascii编码字符串**
+
+####构造Frame
+Frame的结构已经清楚了，我们就构造一个Frame。  
+可以先构造一个数组`[]`，将`FIN`、`Opcode`、`payload-length`、`Mask`等等字段内容按照顺序和位（bit）大小依次放入数组。Node.js中提供了Buffer对象，专门用来弥补JavaScript在处理二进制数据上的不足，这里正好可以用它来完成这个任务：  
+	
+    var frameAsBit = [];
+    //这里压入数组的是已经构造好的bit数据
+    frameAsBit.push(fin, opcode, ...);
+	var buffer = new Buffer(frameAsBit);
 
 按照这种格式，就定义好了一个帧，客户端或者服务器就可以用这个帧来互传数据了。既然数据已经接收，接下来就应该对这些数据进行处理了。
 
