--- a/_posts/2013-11-10-new47.md
+++ b/_posts/2013-11-10-new47.md
@@ -42,7 +42,7 @@ __Note2：接受者不必按顺序缓存整个frame来处理__
 控制帧用来传送WebSocket的状态信息，他可以被插入到分片frame之中。所有的控制帧必须有一个小于等于125字节的payload，并且**control Frames不能被分片**
 
 ####Close Frame
-挑选控制帧中的Close说说。这个帧用来发送断开消息，也就是opcode的值为`0x8`。这个帧可以包含一个由操作代码（头2字节）+断开理组成的body。
+挑选控制帧中的Close说说。这个帧用来发送断开消息，也就是opcode的值为`0x8`。这个帧可以包含一个由操作代码（头2字节）+断开理组成的payload data。
 
 ###数据帧
 前面我们总是谈到“控制帧”和“非控制帧”，想必大家已經看出来一些门路。其实数据帧就是非控制帧。因为这个帧并不是用来提供协议连接状态信息的。数据帧由最高符号位是0的`opcode`确定，现在可用的几个数据帧的opcode是`0x1`（text）、`0x2`（binary）。`0x3～0x7`是其它类型数据帧的预留位。
