--- a/_posts/2013-11-05-new46.md
+++ b/_posts/2013-11-05-new46.md
@@ -27,10 +27,13 @@ metades:
 ###设计哲学
 RFC草案中已经说明，WebSocket的目的就是为了在基础上保证传输的数据量最少。  
 这个协议是基于Frame而非Stream的，也就是说，数据的传输不是像传统的流式读写一样按字节发送，而是采用一帧一帧的Frame，并且每个Frame都定义了严格的数据结构，因此所有的信息就在这个Frame载体中。（后面会详细介绍这个Frame）
+####特点
 
 + 基于TCP协议
-+ 命名空间
-+ 可以和HTTP Server 共享同一port
+
++ 具有命名空间
+
++ 可以和HTTP Server共享同一port
 
 ###Hand-shaking
 下面我先用自然语言描述一下WebSocket的工作原理：  
@@ -65,7 +68,7 @@ Server正确接收后，会返回一个响应头：(同样只有关键的)
 这一机制主要是由接受到数据的服务器 证明了它已经读取了握手信息 从而实现的。并且只有从客户端发送的握手帧中包含合适的信息才会让服务器触发这个动作。
 
 ###和TCP、HTTP协议的关系
-基于TCP的独立的协议。
+WebSocket是基于TCP的独立的协议。  
 和HTTP的唯一关联就是HTTP服务器需要把ws发出的握手动作升级为“UPgrade”请求并进行解释。
 
 默认情况下，ws协议使用80端口进行普通连接，加密的TLS连接默认使用443端口。
@@ -73,13 +76,13 @@ Server正确接收后，会返回一个响应头：(同样只有关键的)
 ###ws的子协议
 客户端向服务器发起握手请求的header中可能带有“Sec-WebSocket-Protocol”字段，用来指定一个特定的子协议，一旦这个字段有设置，那么服务器需要在建立连接的响应头中包含同样的字段，内容就是选择的子协议之一。
 
-子协议的命名应该是注册过的（有一套）
-为了避免潜在的冲突，建议子协议的源（发起者）使用ASCII编码的域名。
-例子：
+子协议的命名应该是注册过的（有一套规范）。  
+为了避免潜在的冲突，建议子协议的源（发起者）使用ASCII编码的域名。  
+例子：  
 一个注册过的子协议叫“chat.xxx.com”，另一个叫“chat.xxx.org”。这两个子协议都会被server同时实现，server会动态的选择使用哪个子协议（取决于客户端发送过来的值）。
 
 ###Extensions
-扩展是用来增加ws协议一些新特性的
+扩展是用来增加ws协议一些新特性的，这里就不详细说了。
 
 ###代码魔法
 上面说的仅仅是个概述，重要的是该如何在我们的web应用中使用或者说该如何建立一个基于WebSocket的应用呢？
