--- a/_posts/2013-11-05-new46.md
+++ b/_posts/2013-11-05-new46.md
@@ -148,7 +148,9 @@ WebSocket传输的数据都是以`Frame`（帧）的形式实现的，就像TCP/
 
 + FIN： 1 bit
 
-		表示这是一个消息的最后的一帧。第一个帧也可能是最后一个。
+		表示这是一个消息的最后的一帧。第一个帧也可能是最后一个。  
+        %x0 : 还有后续帧  
+        %x1 : 最后一帧
 
 + RSV1、2、3： 1 bit each
 
@@ -209,6 +211,6 @@ Frame的结构已经清楚了，我们就构造一个Frame。
     frameAsBit.push(fin, opcode, ...);
 	var buffer = new Buffer(frameAsBit);
 
-按照这种格式，就定义好了一个帧，客户端或者服务器就可以用这个帧来互传数据了。既然数据已经接收，接下来就应该对这些数据进行处理了。
+按照这种格式，就定义好了一个帧，客户端或者服务器就可以用这个帧来互传数据了。既然数据已经接收，接下来看看如何处理这些数据。
 
 （2013.11.5～11.9 未完）
