--- a/_posts/2013-11-05-new46.md
+++ b/_posts/2013-11-05-new46.md
@@ -27,6 +27,7 @@ metades:
 ###设计哲学
 RFC草案中已经说明，WebSocket的目的就是为了在基础上保证传输的数据量最少。  
 这个协议是基于Frame而非Stream的，也就是说，数据的传输不是像传统的流式读写一样按字节发送，而是采用一帧一帧的Frame，并且每个Frame都定义了严格的数据结构，因此所有的信息就在这个Frame载体中。（后面会详细介绍这个Frame）
+
 ####特点
 
 + 基于TCP协议
@@ -202,12 +203,28 @@ WebSocket传输的数据都是以`Frame`（帧）的形式实现的，就像TCP/
 
 ####构造Frame
 Frame的结构已经清楚了，我们就构造一个Frame。  
-可以先构造一个数组`[]`，将`FIN`、`Opcode`、`payload-length`、`Mask`等等字段内容按照顺序和位（bit）大小依次放入数组。Node.js中提供了Buffer对象，专门用来弥补JavaScript在处理二进制数据上的不足，这里正好可以用它来完成这个任务：  
+可以先构造一个数组`[]`，将`FIN`、`Opcode`、`payload-length`、`Mask`等等字段内容按照顺序和位（bit）大小依次放入数组。Node.js中提供了Buffer对象，专门用来弥补JavaScript在处理字节数据上的不足，这里正好可以用它来完成这个任务：  
 	
     var frameAsBit = [];
     //这里压入数组的是已经构造好的bit数据
-    frameAsBit.push(fin, opcode, ...);
+    frameAsBit.push(fin + opcode, mask + payload_len, payload_data);
 	var buffer = new Buffer(frameAsBit);
+    
+不过这段代码究竟能否正确执行呢？（假设fin和opcode以及mask和payloadlen都已经正确转换）
+
+很可惜！上述代码会在推送消息时不仅不会正确显示数据还可能会断开WS连接。为什么会这样呢？看上去我们做的没有错：fin 、 opcode经过转换相加放在第一字节，mask 、 payload-len经过转换相加放在第二字节。最后，把data也压入数组……咦？不对！我们不是规定数组中每一元素存放的是一个字节么？看来问题出现在最后的payload-data上了：应该将data按byte依次压入。
+
+看来我们还得需要借助`Buffer`：
+	
+    var frameAsBit = [];
+    frameAsBit.push(fin + opcode, mask + payload_len);
+	var buffer = new Buffer(frameAsBit);
+	
+    //将data转化为二进制字节数组
+	var data = new Buffer(payload_data);
+    
+    //连接两个buffer
+    Buffer.concat([buffer, data]);
 
 按照这种格式，就定义好了一个帧，客户端或者服务器就可以用这个帧来互传数据了。既然数据已经接收，接下来就应该对这些数据进行处理了。
 
