--- a/_posts/2013-11-10-new47.md
+++ b/_posts/2013-11-10-new47.md
@@ -80,4 +80,12 @@ __Note2：接受者不必按顺序缓存整个frame来处理__
 
 需要注意的是：Frame的数据结构都是以16进制表示的，所以每次接收到的数据都是上面这个样子。
 
-（2013.11.10 未完）
+###被省略的操作
+这两篇blog里主要用自然语言讲了WebSocket的实现。代码的细节操作（例如：处理数据等）并没有给出。因为核心实现原理已经阐明，至于FIN、Opcode等位操作，大家仔细想想便可清楚。
+
+示例代码已上传到Gist上，如果想详细学习可移歩至  
+https://gist.github.com/abbshr/7511762
+以及
+https://gist.github.com/abbshr/7511731
+
+（2013.11.10 完）
