--- a/_posts/2013-08-20-new39.md
+++ b/_posts/2013-08-20-new39.md
@@ -14,11 +14,9 @@ metades:
 
 下面是一个JS实现的渐变效果，代码很简单，我对其做了进一步的封装。其中参数如下：
 
-	/*
-	* speed  : 基于元时间的渐变速度,正整数(可选)
-	* opacity: 渐变到指定的透明度,0~100(可选)
-	* time   : 渐变元时间
-	*/
+	//speed  : 基于元时间的渐变速度,正整数(可选)
+	//opacity: 渐变到指定的透明度,0~100(可选)
+	//time   : 渐变元时间
 
 使用时先创建一个元素的配置对象：
 
