--- a/_posts/2014-01-10-new50.md
+++ b/_posts/2014-01-10-new50.md
@@ -1,5 +1,12 @@
 ---
+layout: poslay
 title: Binary World：ArrayBuffer、Blob以及他们的应用
+label: Binary Data
+kind:
+ptr:
+mdmark: ran
+metakey:
+metades:
 ---
 
 ###Frontend
