--- a/_posts/2014-01-10-new50.md
+++ b/_posts/2014-01-10-new50.md
@@ -47,17 +47,17 @@ HTML5为我们带来不少新奇的东西，除了那几个闪亮的明星“Web
 对于后一种情况，无论用view创建多少个实例，这些引用都是指向原始的ArrayBuffer内存地址，所以一旦对某一view的实例做了变动，其他view的实例也会变化。
 
 #####note
-注意：通过view对ArrayBuffer进行读写时，需要注意bit的读写方式，即“低位次序”和“高位次序”。  
-举个形象的例子。buffer中的一个byte，其中的bit位如下：
+注意：通过view对ArrayBuffer进行读写时，需要注意byte的读写方式，即“低位优先字节次序”和“高位优先字节次序”。  
+所谓**字节次序**是指占内存**多于一个字节类型**的数据在**内存中的存放顺序**。  
+举个形象的例子。将一个4byte的数`0xFE051324`放入内存，如果是低优先顺序，内存中的存储如下：
 
-    | 1 | 0 | 0 | 0 | 0 | 1 | 1 | 1 |
+    内存地址减小 <—— | 24 | 13 | 05 | FE | ——> 内存地址增大
 
-这个二进制数据转化成十进制是：128 + 4 + 2 + 1 = 135，而按照上面这种在内存中的存储方式为“高位次序”。  
-如果按照*低位次序*来存储这一数据，在内存中的实际存放是这样的：
+如果按照高位优先顺序来存储这一数据，在内存中的实际存放是这样的：
 
-    | 1 | 1 | 1 | 0 | 0 | 0 | 0 | 1 |
+    内存地址减小 <—— | FE | 05 | 13 | 24 | ——> 内存地址增大
 
-正好对称过来，如果仍按照“高位次序”的方式来读取，则读出来的数据就是：128 + 64 + 32 + 1 = 225
+正好对称过来，如果仍按照“低位次序”的方式来读取，则读出来的数据就是：`0x241305FE`
 
 因此，事先知道数据的读取方式很重要。那如何按照我们所期望的方式来读取呢？还要感谢HTML5，它提供了更高级的view：`DataView`对象，专业操作ArrayBuffer。
 
